force-app/main/default/objects/Market__c/fields/RHB_Survey_Time_Frame__c.field-meta.xml
<CustomField>
    <fullName>RHB_Survey_Time_Frame__c</fullName>
    <description>Time period during which recent homebuyers were surveyed.</description>
    <inlineHelpText>Time period during which recent homebuyers were surveyed.</inlineHelpText>
    <label>RHB Survey Time Frame</label>
    <length>50</length>
    <type>Text</type>
</CustomField>