force-app/main/default/objects/Market__c/fields/Sales_Close__c.field-meta.xml
<CustomField>
    <fullName>Sales_Close__c</fullName>
    <label>Sales Close</label>
    <type>Date</type>
</CustomField>