force-app/main/default/objects/Market__c/fields/Sales_Start__c.field-meta.xml
<CustomField>
    <fullName>Sales_Start__c</fullName>
    <label>Sales Start</label>
    <type>Date</type>
</CustomField>