force-app/main/default/objects/Market__c/fields/Second_Publication_Upload__c.field-meta.xml
<CustomField>
    <fullName>Second_Publication_Upload__c</fullName>
    <label>Second Publication Upload</label>
    <type>Date</type>
</CustomField>