force-app/main/default/objects/Market__c/fields/Secondary_Magazine_Readership__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Magazine_Readership__c</fullName>
    <label>Secondary Magazine Readership</label>
    <length>100</length>
    <type>Text</type>
</CustomField>