force-app/main/default/objects/Market__c/fields/Secondary_Magazine_Website__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Magazine_Website__c</fullName>
    <label>Secondary Magazine Website</label>
    <type>Url</type>
</CustomField>