force-app/main/default/objects/Market__c/fields/SGIZMO_URL__c.field-meta.xml
<CustomField>
    <fullName>SGIZMO_URL__c</fullName>
    <label>SGIZMO URL</label>
    <type>Url</type>
</CustomField>