force-app/main/default/objects/Market__c/fields/Super_Market__c.field-meta.xml
<CustomField>
    <fullName>Super_Market__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Super Market</label>
    <referenceTo>Super_Market__c</referenceTo>
    <relationshipLabel>Markets</relationshipLabel>
    <relationshipName>Markets</relationshipName>
    <type>Lookup</type>
</CustomField>