force-app/main/default/objects/Market__c/fields/Total_Market_Goal__c.field-meta.xml
<CustomField>
    <fullName>Total_Market_Goal__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Market Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>