force-app/main/default/objects/Market__c/fields/Total_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Total_Opportunities__c</fullName>
    <description>Sales Opportunities</description>
    <inlineHelpText>Sales Opportunities</inlineHelpText>
    <label># Total Opportunities</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>