force-app/main/default/objects/Market__c/fields/Total_Post_Market_Goal__c.field-meta.xml
<CustomField>
    <fullName>Total_Post_Market_Goal__c</fullName>
    <formula>Total_New_Business_Post_Market_Goal__c +  Total_Retention_Post_Market_Goal__c +  Total_Post_Market_Manager_Goal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Post Market Goal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>