force-app/main/default/objects/Market__c/fields/Total_Post_Market_Manager_Goal__c.field-meta.xml
<CustomField>
    <fullName>Total_Post_Market_Manager_Goal__c</fullName>
    <label>Total Post Market Manager Goal</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>