force-app/main/default/objects/Market__c/fields/Total_Primary_Market_Goal_del__c.field-meta.xml
<CustomField>
    <fullName>Total_Primary_Market_Goal_del__c</fullName>
    <label>Total Primary Market Goal</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>