force-app/main/default/objects/Market__c/fields/Total_Retention_Post_Market_Goal__c.field-meta.xml
<CustomField>
    <fullName>Total_Retention_Post_Market_Goal__c</fullName>
    <label>Total Retention Post Market Goal</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>