force-app/main/default/objects/Market__c/fields/Traffic_Lead__c.field-meta.xml
<CustomField>
    <fullName>Traffic_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Traffic Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Markets3</relationshipName>
    <type>Lookup</type>
</CustomField>