force-app/main/default/objects/Market__c/fields/TY_Magazine_Section__c.field-meta.xml
<CustomField>
    <fullName>TY_Magazine_Section__c</fullName>
    <label>TY Magazine Section</label>
    <type>Url</type>
</CustomField>