force-app/main/default/objects/Market__c/fields/Unassigned_Goal__c.field-meta.xml
<CustomField>
    <fullName>Unassigned_Goal__c</fullName>
    <formula>Total_Market_Goal__c -  Period_1_Profile_Goal__c -  Period_1_MPS_Goal__c -  Period_2_Profile_Goal__c -  Period_2_MPS_Goal__c -  Period_3_Profile_Goal__c -  Period_3_MPS_Goal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unassigned Goal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>