force-app/main/default/objects/Market__c/fields/Unassigned_Primary_Market_Goal__c.field-meta.xml
<CustomField>
    <fullName>Unassigned_Primary_Market_Goal__c</fullName>
    <formula>Total_Primary_Market_Goal_del__c -  Total_New_Business_Primary_Market_Goal__c -  Total_Retention_Primary_Market_Goal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unassigned Primary Market Goal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>