force-app/main/default/objects/Market__c/fields/Web_Listings_Go_Live__c.field-meta.xml
<CustomField>
    <fullName>Web_Listings_Go_Live__c</fullName>
    <label>Web Listings Go Live</label>
    <type>Date</type>
</CustomField>