force-app/main/default/objects/Market__c/fields/Web_Listings_Turn_Off__c.field-meta.xml
<CustomField>
    <fullName>Web_Listings_Turn_Off__c</fullName>
    <label>Web Listings Turn Off</label>
    <type>Date</type>
</CustomField>