force-app/main/default/objects/Market__c/fields/WF_Award_Guide__c.field-meta.xml
<CustomField>
    <fullName>WF_Award_Guide__c</fullName>
    <label>WF Award Guide</label>
    <type>Url</type>
</CustomField>