force-app/main/default/objects/Market__c/fields/WF_Certification_Link__c.field-meta.xml
<CustomField>
    <fullName>WF_Certification_Link__c</fullName>
    <label>WF Certification Link</label>
    <type>Url</type>
</CustomField>