force-app/main/default/objects/Market__c/fields/WF_Marketing_Link__c.field-meta.xml
<CustomField>
    <fullName>WF_Marketing_Link__c</fullName>
    <label>WF Marketing Link</label>
    <type>Url</type>
</CustomField>