force-app/main/default/objects/Market__c/fields/WF_Packages_Link__c.field-meta.xml
<CustomField>
    <fullName>WF_Packages_Link__c</fullName>
    <label>WF Packages Link</label>
    <type>Url</type>
</CustomField>