force-app/main/default/objects/Market__c/fields/Winners_LY_Actual__c.field-meta.xml
<CustomField>
    <fullName>Winners_LY_Actual__c</fullName>
    <label>Winners LY Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>