force-app/main/default/objects/Market__c/fields/WSJ_Circulation__c.field-meta.xml
<CustomField>
    <fullName>WSJ_Circulation__c</fullName>
    <label>WSJ Circulation</label>
    <length>250</length>
    <type>Text</type>
</CustomField>