force-app/main/default/objects/Market__c/fields/WSJ_Publication_Date__c.field-meta.xml
<CustomField>
    <fullName>WSJ_Publication_Date__c</fullName>
    <label>WSJ Publication Date</label>
    <length>250</length>
    <type>Text</type>
</CustomField>