force-app/main/default/objects/Market__c/fields/WSJ_Region__c.field-meta.xml
<CustomField>
    <fullName>WSJ_Region__c</fullName>
    <description>The WSJ Publication Region</description>
    <inlineHelpText>The WSJ Publication Region</inlineHelpText>
    <label>WSJ Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>