force-app/main/default/objects/Market__c/fields/WSJ_Section__c.field-meta.xml
<CustomField>
    <fullName>WSJ_Section__c</fullName>
    <description>A link to the watermarked version of the WSJ section</description>
    <inlineHelpText>A link to the watermarked version of the WSJ section</inlineHelpText>
    <label>WSJ Section</label>
    <type>Url</type>
</CustomField>