force-app/main/default/objects/Market__c/fields/WSJ_Space_Reservation__c.field-meta.xml
<CustomField>
    <fullName>WSJ_Space_Reservation__c</fullName>
    <label>WSJ Space Reservation</label>
    <type>Date</type>
</CustomField>