force-app/main/default/objects/Market__c/fields/WSJ_Upload__c.field-meta.xml
<CustomField>
    <fullName>WSJ_Upload__c</fullName>
    <label>WSJ Upload</label>
    <type>Date</type>
</CustomField>