force-app/main/default/objects/Market__c/fields/X1st_email__c.field-meta.xml
<CustomField>
    <fullName>X1st_email__c</fullName>
    <label>1st email</label>
    <type>Date</type>
</CustomField>