force-app/main/default/objects/Market__c/fields/X2nd_Email__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Email__c</fullName>
    <label>2nd Email</label>
    <type>Date</type>
</CustomField>