force-app/main/default/objects/Market__c/fields/X5_POINT_Publication_Date__c.field-meta.xml
<CustomField>
    <fullName>X5_POINT_Publication_Date__c</fullName>
    <description>5 POINT magazine publication date</description>
    <inlineHelpText>5 POINT pub date</inlineHelpText>
    <label>5 POINT Publication Date</label>
    <length>100</length>
    <type>Text</type>
</CustomField>