force-app/main/default/objects/Market__c/fields/X5_POINT_Space_Reservation__c.field-meta.xml
<CustomField>
    <fullName>X5_POINT_Space_Reservation__c</fullName>
    <description>5 POINT Space Reservation Date</description>
    <inlineHelpText>5 POINT Space Reservation Date</inlineHelpText>
    <label>5 POINT Space Reservation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>