force-app/main/default/objects/Market__c/fields/X5_POINT_Upload_Date__c.field-meta.xml
<CustomField>
    <fullName>X5_POINT_Upload_Date__c</fullName>
    <description>5 POINT Upload Date DATE field</description>
    <inlineHelpText>5 POINT Upload Date DATE field</inlineHelpText>
    <label>5 POINT Upload Date</label>
    <type>Date</type>
</CustomField>