force-app/main/default/objects/Market__c/fields/X5_POINT_Upload_Date_Retired__c.field-meta.xml
<CustomField>
    <fullName>X5_POINT_Upload_Date_Retired__c</fullName>
    <description>5 POINT magazine upload date RETIRED text field</description>
    <inlineHelpText>5 POINT magazine upload date RETIRED text field</inlineHelpText>
    <label>5 POINT Upload Date_Retired</label>
    <length>100</length>
    <type>Text</type>
</CustomField>