force-app/main/default/objects/Market__c/fields/X5_Pub_Month__c.field-meta.xml
<CustomField>
    <fullName>X5_Pub_Month__c</fullName>
    <formula>Market_Close_Date__c + 4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>+5 Pub Month</label>
    <type>Date</type>
</CustomField>