force-app/main/default/objects/Market__c/fields/Years_with_the_magazine__c.field-meta.xml
<CustomField>
    <fullName>Years_with_the_magazine__c</fullName>
    <label>Years in the market</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>