force-app/main/default/objects/Market__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Profession__c</columns>
    <columns>Publication_Month__c</columns>
    <columns>Sales_Start__c</columns>
    <columns>Sales_Close__c</columns>
    <columns>New_Space_Reservation__c</columns>
    <columns>New_Final_Upload__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>23</value>
    </filters>
    <label>2023 Markets</label>
    <language>en_US</language>
</ListView>