force-app/main/default/objects/Market__c/listViews/Legends_Markets.listView-meta.xml
<ListView>
    <fullName>Legends_Markets</fullName>
    <columns>NAME</columns>
    <columns>Web_Listings_Go_Live__c</columns>
    <columns>Launch_Market__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Web_Listings_Go_Live__c</field>
        <operation>lessOrEqual</operation>
        <value>NEXT_MONTH</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Legends 2022,Forbes 2022</value>
    </filters>
    <label>Legends Markets - Upcoming</label>
    <language>en_US</language>
</ListView>