force-app/main/default/objects/Market__c/listViews/Market_Info.listView-meta.xml
<ListView>
    <fullName>Market_Info</fullName>
    <columns>NAME</columns>
    <columns>Market__c</columns>
    <columns>Publication_Year__c</columns>
    <columns>Publication_Month__c</columns>
    <columns>Web_Listings_Go_Live__c</columns>
    <columns>Sales_Close__c</columns>
    <columns>New_Final_Upload__c</columns>
    <columns>Fortune_Space_Reservation__c</columns>
    <columns>Fortune_Upload_Date__c</columns>
    <columns>Fortune_Issue_Date__c</columns>
    <columns>Forbes_Issue_Date__c</columns>
    <columns>WSJ_Publication_Date__c</columns>
    <columns>WSJ_Upload__c</columns>
    <columns>WSJ_Space_Reservation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Start__c</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_YEAR</value>
    </filters>
    <label>Market Info</label>
    <sharedTo>
        <group>Ad_Prod</group>
    </sharedTo>
</ListView>