force-app/main/default/objects/Market__c/listViews/newall.listView-meta.xml
<ListView>
    <fullName>newall</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>newall</label>
</ListView>