force-app/main/default/objects/Market__c/listViews/Product_Templates_NextMonth.listView-meta.xml
<ListView>
    <fullName>Product_Templates_NextMonth</fullName>
    <columns>NAME</columns>
    <columns>Production_Owner__c</columns>
    <columns>Publication_Year__c</columns>
    <columns>Product_Templates_Created__c</columns>
    <columns>Product_Templates_Finalized__c</columns>
    <columns>Publication_Month__c</columns>
    <columns>Index_Pull_Date1__c</columns>
    <columns>Magazine_Text__c</columns>
    <columns>Web_Listings_Go_Live__c</columns>
    <columns>New_Final_Upload__c</columns>
    <columns>Actual_Upload_Date__c</columns>
    <columns>Market_Disclosure__c</columns>
    <columns>Winners_in_Market__c</columns>
    <columns>Auto_Round_One_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Templates_Created__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Auto_Round_One_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>NEXT_MONTH</value>
    </filters>
    <filters>
        <field>Winners_in_Market__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>1/1/2018 12:00 AM</value>
    </filters>
    <filters>
        <field>Publication_Month__c</field>
        <operation>notEqual</operation>
        <value>ON HOLD</value>
    </filters>
    <label>Product Templates NEXT MONTH</label>
    <sharedTo>
        <group>Brianna_Jahangir</group>
        <group>Jonathan_Wesser</group>
        <group>Olivia_Snyder</group>
    </sharedTo>
</ListView>