force-app/main/default/objects/Market__c/listViews/Product_Templates_to_Finalize.listView-meta.xml
<ListView>
    <fullName>Product_Templates_to_Finalize</fullName>
    <columns>NAME</columns>
    <columns>Production_Owner__c</columns>
    <columns>Publication_Year__c</columns>
    <columns>Product_Templates_Created__c</columns>
    <columns>Product_Templates_Finalized__c</columns>
    <columns>Publication_Month__c</columns>
    <columns>Index_Pull_Date1__c</columns>
    <columns>Magazine_Text__c</columns>
    <columns>Web_Listings_Go_Live__c</columns>
    <columns>New_Final_Upload__c</columns>
    <columns>Actual_Upload_Date__c</columns>
    <columns>Market_Disclosure__c</columns>
    <columns>Winners_in_Market__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Templates_Finalized__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Product_Templates_Created__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Winners_in_Market__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>__1. MONDAY Product Templates toFinalize</label>
    <sharedTo>
        <group>Fulfillment_Team</group>
        <group>Jonathan_Wesser</group>
        <group>Mindy_Stansbarger</group>
        <group>Olivia_Snyder</group>
    </sharedTo>
</ListView>