force-app/main/default/objects/Market__c/listViews/RE_Markets.listView-meta.xml
<ListView>
    <fullName>RE_Markets</fullName>
    <columns>NAME</columns>
    <columns>Market__c</columns>
    <columns>Profession__c</columns>
    <columns>Magazine_Text__c</columns>
    <columns>Publication_Month__c</columns>
    <columns>Publication_Year__c</columns>
    <columns>Market_Start_Date__c</columns>
    <columns>Sales_Start__c</columns>
    <columns>Sales_Close__c</columns>
    <columns>Web_Listings_Go_Live__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>RE</value>
    </filters>
    <label>RE Markets</label>
</ListView>