force-app/main/default/objects/Market__c/listViews/RIWM.listView-meta.xml
<ListView>
    <fullName>RIWM</fullName>
    <columns>NAME</columns>
    <columns>Market__c</columns>
    <columns>Profession__c</columns>
    <columns>Publication_Year__c</columns>
    <columns>Market_Close_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Market_Close_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>RIWM</label>
</ListView>