force-app/main/default/objects/Market__c/listViews/Upcoming_Publications_Magazine_orders.listView-meta.xml
<ListView>
    <fullName>Upcoming_Publications_Magazine_orders</fullName>
    <columns>SF_ID__c</columns>
    <columns>NAME</columns>
    <columns>Publication_Month__c</columns>
    <columns>New_Space_Reservation__c</columns>
    <columns>Magazine_Text__c</columns>
    <columns>Sales_Close__c</columns>
    <columns>New_Final_Upload__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>New_Space_Reservation__c</field>
        <operation>greaterOrEqual</operation>
        <value>N_DAYS_AGO:60</value>
    </filters>
    <label>Upcoming Publications - Magazine orders</label>
</ListView>